unpackaged/main/default/objects/litify_pm__Role_View_Detail_Field__mdt/litify_pm__Role_View_Detail_Field__mdt.object-meta.xml
<CustomObject>
    <label>Role View Detail Field</label>
    <pluralLabel>Role View Detail Fields</pluralLabel>
</CustomObject>