unpackaged/main/default/objects/litify_pm__Role_View_Detail_Field__mdt/fields/litify_pm__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>