unpackaged/main/default/objects/litify_pm__Role_View_Detail_Field__mdt/fields/litify_pm__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>