unpackaged/main/default/objects/litify_pm__Role_View_Detail_Field__mdt/fields/litify_pm__Required__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>