unpackaged/main/default/objects/litify_pm__Role_View_Detail_Field__mdt/fields/litify_pm__Role_View_Detail__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Role_View_Detail__c</fullName>
    <label>Role View Detail</label>
    <referenceTo>litify_pm__Role_View_Detail__mdt</referenceTo>
    <relationshipLabel>Role View Detail Fields</relationshipLabel>
    <relationshipName>Role_View_Detail_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>